--- a/static/css/common.css
+++ b/static/css/common.css
@@ -17,5 +17,5 @@ html {
 }
 
 .gradient-background {
-    background-image: linear-gradient(-180deg, #0F184D 0%, #0054AD 75%);
+    background: #C7F0FA;
 }
