--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,3 +45,25 @@
         background-position: 800px 0px, 800px 0px, 800px 0px, 800px 0px;
     }
 }
+
+.shine {
+    width: 100%;
+    /*Make sure the animation is over the whole element*/
+    -webkit-animation-name: ShineAnimation;
+    -webkit-animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: cubic-bezier(.12, .89, .98, .47);
+}
+
+@-webkit-keyframes ShineAnimation {
+    from {
+        background-repeat: no-repeat;
+        background-image: -webkit-linear-gradient( top left, rgba(255, 255, 255, 0.0) 0%, rgba(255, 255, 255, 0.0) 45%, rgba(255, 255, 255, 0.5) 48%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0.5) 52%, rgba(255, 255, 255, 0.0) 57%, rgba(255, 255, 255, 0.0) 100%);
+        background-position: -250px -250px;
+        background-size: 600px 600px
+    }
+    to {
+        background-repeat: no-repeat;
+        background-position: 250px 250px;
+    }
+}
