--- a/static/css/common.css
+++ b/static/css/common.css
@@ -36,6 +36,7 @@ html {
 }
 
 .button {
+    user-select: none;
     background-color: rgba(27, 179, 245, 1);
     color: #f2f2f2;
     padding: 20px 40px;
@@ -46,4 +47,19 @@ html {
 
 .button:active {
     background-color: rgba(27, 179, 245, 0.6);
+}
+
+.button_dark {
+    background-color: rgb(35, 81, 190)
+}
+
+.atm-name {
+    font-size: 42px;
+    line-height: 42px;
+    font-family: 'Rubik Mono One', sans-serif;
+    color: #f2f2f2;
+    margin: 20px 20px;
+    text-align: left;
+    text-decoration: none;
+    display: block;
 }
