--- a/static/css/language.css
+++ b/static/css/language.css
@@ -1,7 +1,7 @@
 .languages-wrapper {
     user-select: none;
     position: relative;
-    padding-top: 60px;
+    padding-top: 90px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +18,8 @@
 }
 
 .language {
+    width: 200px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,7 +33,7 @@
     width: 100%;
     text-align: center;
     opacity: 0;
-    font-size: 32px;
+    font-size: 48px;
     margin: 10px 0;
 }
 
@@ -43,8 +45,10 @@
     width: 100%;
     height: 100%;
     color: #f2f2f2;
-    font-size: 28px;
+    font-size: 36px;
+    line-height: 45px;
     margin: 5px;
+    text-align: center;
 }
 
 .language_flag {
