--- a/static/css/common.css
+++ b/static/css/common.css
@@ -30,7 +30,7 @@ html {
 .watermark-image {
     width: 90%;
     height: 90%;
-    z-index: 1000;
+    z-index: -1000;
     position: absolute;
     opacity: 0.1;
     top: 5%;
@@ -66,11 +66,40 @@ html {
     line-height: 42px;
     font-family: 'Rubik Mono One', sans-serif;
     color: #f2f2f2;
-    margin: 20px 20px;
+    margin: 20px;
     text-align: left;
     text-decoration: none;
     display: inline-block;
     z-index: 3000;
+}
+
+.back-block {
+    position: absolute;
+    color: #f2f2f2;
+    margin: 20px;
+    padding-right: 50px;
+    text-decoration: none;
+    right: 0;
+    height: 42px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    line-height: 42px;
+    font-size: 18px;
+}
+
+.back-block:after {
+    content: '';
+    width: 42px;
+    height: 42px;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.back-block_home {}
+
+.back-block_return-card:after {
+    background-image: url("../img/credit-card-return.svg")
 }
 
 .center-content {
